Fixed position mobile menu

--- a/components/common/menu/styles.module.scss
+++ b/components/common/menu/styles.module.scss
@@ -39,7 +39,7 @@
   text-align: left;
   background-color: white;
   width: 10rem;
-  left: 10rem;
+  right: 3.5rem;
   top: -0.5rem;
   border: 1px solid $item-border;
   border-radius: .5rem;
